--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 .container {
 	margin: 0 auto;
 	width: 93%;
-	max-width: 1000px;
+	max-width: 800px;
 	display: grid;
 }
 
@@ -32,7 +32,7 @@ body {
 	margin-top: 10px;
 }
 
-/* Formatting for Banner */
+/* Formatting for Banner & Navigation*/
 
 .banner{
 	background-color: white;
@@ -43,6 +43,15 @@ body {
 	margin-top: 0;
 	padding-top: 15px;
 }
+
+.menu ul {
+	list-style-type: none;
+	margin: 0;
+	padding-left: 0; 
+	display: flex;
+	justify-content: space-around;
+}
+
 /* Formatting for imgages */
 
 .restrict {
@@ -53,3 +62,5 @@ body {
 }
 
 /* Formatting Headings */
+
+/* Formatting for Footer*/
