--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 body {
 	font-family: "trebuchet ms", palatino, georgia, helvetica, arial, sans-serif;
 	letter-spacing: -0.25px;
-	line-height: 2em;
+	line-height: 1.8em;
 	margin-top: 0px; 
 	margin-bottom: 50px;
-	background-color: #f7f2da; 
+	background-color: white; 
 	font-size: 15.5px;
 	margin-right: 0;
 	margin-left: 0;
@@ -29,27 +29,42 @@ body {
 	grid-row-gap: 5px;
 	height: auto;
 	margin-bottom: 10px;
-	margin-top: 10px;
+	margin-top: 4px;
+	background-color: #f2f2f2;
+	padding-left: 13px;
+	padding-right: 13px;
+	border-radius: 10px;
 }
 
 /* Formatting for Banner & Navigation*/
 
 .banner{
 	background-color: white;
-	margin: 0px;
+	display: grid;
+	grid-template-columns: repeat(2, 1fr);
+	grid-template-rows: 1fr;
+	padding-top: 20px;
+	padding-bottom: 20px;
+	border-bottom: 5px solid #f7d543;
+	margin-bottom: 5px;
 }
 
 .banner h1 {
 	margin-top: 0;
 	padding-top: 15px;
+	margin-left: 400px;
+	font-size: 40px;
+	color: #004a4a;
 }
 
 .menu ul {
 	list-style-type: none;
-	margin: 0;
 	padding-left: 0; 
 	display: flex;
 	justify-content: space-around;
+	max-width: 800px;
+	margin-right: 400px;
+
 }
 
 .menu a{
@@ -62,6 +77,7 @@ body {
 	padding-right: 15px;
 	padding-top: 0px;
 	padding-bottom: 0px;
+	border: solid;
 }
 
 .menu a:hover {
