--- a/css/style.css
+++ b/css/style.css
@@ -53,8 +53,8 @@ body {
 	margin-top: 0;
 	padding-top: 15px;
 	margin-left: 400px;
-	font-size: 40px;
-	color: #004a4a;
+	font-size: 45px;
+	color: #007373;
 }
 
 .menu ul {
@@ -69,7 +69,7 @@ body {
 
 .menu a{
 	text-decoration: none;
-	color: #799351;
+	color: #004a4a;
 	display: block;
 	border-radius: 10px;
 	background-color: ;
@@ -77,7 +77,8 @@ body {
 	padding-right: 15px;
 	padding-top: 0px;
 	padding-bottom: 0px;
-	border: solid;
+	font-size: 18px;
+	font-weight: bold;
 }
 
 .menu a:hover {
