--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* Stylesheet for Project 01 */
 
 body {
-	font-family: "trebuchet ms", palatino, georgia, helvetica, arial, sans-serif;
+	font-family: 'Montserrat', "trebuchet ms", palatino, georgia, helvetica, arial, sans-serif;
 	letter-spacing: -0.25px;
 	line-height: 1.8em;
 	margin-top: 0px; 
@@ -30,7 +30,7 @@ body {
 	height: auto;
 	margin-bottom: 10px;
 	margin-top: 4px;
-	background-color: #f2f2f2;
+	background-color: #f5f5f5;
 	padding-left: 13px;
 	padding-right: 13px;
 	border-radius: 10px;
@@ -55,6 +55,7 @@ body {
 	margin-left: 400px;
 	font-size: 45px;
 	color: #007373;
+	font-family: 'Reggae One', cursive;
 }
 
 .menu ul {
@@ -75,8 +76,8 @@ body {
 	background-color: ;
 	padding-left: 15px;
 	padding-right: 15px;
-	padding-top: 0px;
-	padding-bottom: 0px;
+	padding-top: 6px;
+	padding-bottom: 7px;
 	font-size: 18px;
 	font-weight: bold;
 }
@@ -84,7 +85,7 @@ body {
 .menu a:hover {
 	color: #e07b7b;
 	background-color: #d1d1d1;
-	transition: background-color 0.2s ease-in;
+	transition: background-color 0.4s ease-in;
 
 }
 
@@ -101,8 +102,26 @@ body {
 	float: right;
 	max-height: 400px;
 	padding: 5px;
+	border-radius: 8px;
 }
 
 /* Formatting Headings */
+
+h2 {
+	font-size: 55px;
+	text-align: center;
+	color: #e07b7b;
+	font-family: 'Reggae One', cursive;
+}
+
+h3 {
+	font-size: 30px;
+	color: #008585;
+}
+
+h4 {
+	font-size: 20px;
+	color: #00a1a1;
+}
 
 /* Formatting for Footer*/
