--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,11 @@ body {
 	letter-spacing: -0.25px;
 	line-height: 1.8em;
 	margin-top: 0px; 
-	margin-bottom: 50px;
 	background-color: white; 
 	font-size: 16px;
 	margin-right: 0;
 	margin-left: 0;
+	margin-bottom: 0;
 }
 
 /*Container for Layout*/
@@ -144,3 +144,24 @@ h4 {
 }
 
 /* Formatting for Footer*/
+
+footer {
+	background-color: #007373;
+	text-align: center;
+	padding-top: 10px;
+}
+
+footer div {
+	margin-bottom: 0;
+	margin-top: 0;
+	color: #ffffff;
+	height: 45px;
+	max-height: 30px;
+}
+
+footer a {
+	color: #f7d543;
+	text-decoration: none; 
+}
+
+a:hover { color: #e07b7b; }
