--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,90 @@ footer a {
 }
 
 a:hover { color: #e07b7b; }
+
+
+/* For index.html z-layout */
+
+
+.firstRow{
+    display: grid;
+    grid-template-columns: 7fr 3fr;
+    grid-auto-rows: minmax(50px,auto);
+}
+
+.secondL{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+
+.secondRow{
+    display: grid;
+    grid-template-columns: 5fr 3fr;
+    grid-auto-rows: 500px;
+}
+
+
+.parent {
+	position: relative;
+	top: 0;
+	left: 0;
+}
+
+.image1 {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 300px;
+	height: 300px;
+	border-radius: 10px;
+}
+.image2 {
+	position: absolute;
+	top: 50px;
+	left: 50px;
+	width: 300px;
+	height: 300px;
+	border-radius: 10px;
+}
+.image3 {
+	position: absolute;
+	top: 100px;
+	left: 100px;
+	width: 300px;
+	height: 300px;
+	border-radius: 10px;
+}
+.image4 {
+	position: absolute;
+	top: 150px;
+	left: 150px;
+	width: 300px;
+	height: 300px;
+	border-radius: 10px;
+}
+.button{
+	position: absolute;
+	color: black;
+	right:    10px;
+	bottom:   10px;
+	background-color: #1843bb8f;
+	border-radius: 10px;
+	padding-left: 15px;
+	padding-right: 15px;
+	padding-top: 6px;
+	padding-bottom: 7px;
+	font-size: 18px;
+	font-weight: bold;
+}
+.formHere{
+	margin: 10px;
+	padding: 10px;
+	margin-bottom: 50px;
+	border-radius: 10px;
+	position: relative;
+	top: 0;
+	left: 0;
+	background-color: #004a4a83;
+}
+
+
