fix homepage text

--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,7 @@ a:hover { color: #e07b7b; }
 	font-weight: bold;
 }
 .formHere{
+	font-size: 15px;
 	margin: 10px;
 	padding: 10px;
 	margin-bottom: 50px;
