--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,12 @@ header.banner-wrapper {
   max-width: 100%;
 }
 
+.title-quote {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
 /* Formatting Headings */
 h1 {
 	font-family: 'Playfair Display', serif;
